--- a/DXWebApplication/Views/Home/_PartialSalGridView.cshtml
+++ b/DXWebApplication/Views/Home/_PartialSalGridView.cshtml
@@ -7,42 +7,30 @@
     settings.Name = "SalaryAmountGridView";
     settings.KeyFieldName = "HRS_SAL_ID";
     settings.Width = Unit.Percentage(100);
-
     settings.CallbackRouteValues = new { Controller = "Home", Action = "PartialSalGridView" };
     settings.SettingsEditing.BatchUpdateRouteValues = new { Controller = "Home", Action = "SalaryBatchEditingUpdateModel", id = ViewBag.id  };
-
     settings.SettingsEditing.Mode = GridViewEditingMode.Batch;
     settings.SettingsPager.Mode = GridViewPagerMode.ShowPager;
-
     settings.Settings.ShowStatusBar = GridViewStatusBarMode.Hidden;
-
     settings.SettingsEditing.BatchEditSettings.EditMode = GridViewBatchEditMode.Cell;
     settings.SettingsEditing.BatchEditSettings.StartEditAction = GridViewBatchStartEditAction.Click;
     settings.SettingsEditing.BatchEditSettings.HighlightDeletedRows = true;
     settings.SettingsEditing.BatchEditSettings.KeepChangesOnCallbacks = DefaultBoolean.True;
     settings.SettingsEditing.NewItemRowPosition = GridViewNewItemRowPosition.Bottom;
     settings.SettingsEditing.BatchEditSettings.HighlightDeletedRows = false;
-
-
-
     settings.EditFormLayoutProperties.SettingsAdaptivity.AdaptivityMode = FormLayoutAdaptivityMode.SingleColumnWindowLimit;
     settings.EditFormLayoutProperties.SettingsAdaptivity.SwitchToSingleColumnAtWindowInnerWidth = 700;
     settings.EditFormLayoutProperties.SettingsItems.VerticalAlign = FormLayoutVerticalAlign.Middle;
-
     settings.ClientSideEvents.BatchEditStartEditing = settings.Name + "_OnBatchEditStartEditing";
     settings.ClientSideEvents.BatchEditRowInserting = settings.Name + "_OnBatchEditRowInserting";
-
     settings.CommandColumn.Visible = true;
-    //settings.CommandColumn.ShowCancelButton = false;
     settings.CommandColumn.ShowDeleteButton = true;
     settings.CommandColumn.ShowNewButtonInHeader = true;
     settings.CommandColumn.ShowCancelButton = true;
     settings.CommandColumn.ShowRecoverButton = false;
     settings.SettingsBehavior.AllowFocusedRow = true;
     settings.CommandColumn.Width = Unit.Pixel(150);
-
-
-
+    //columns
     settings.Columns.Add(c =>
     {
         c.FieldName = "HRS_SAL_SalaryAmount";
@@ -56,7 +44,6 @@
             tb.DisplayFormatString = "{0:G29}";
         });
     });
-
     settings.Columns.Add(c =>
     {
         c.FieldName = "HRS_SAL_StartDate";
@@ -65,7 +52,6 @@
         c.PropertiesEdit.DisplayFormatString = "MM/dd/yyyy";
 
     });
-
     settings.Columns.Add(c =>
     {
         c.FieldName = "HRS_SAL_EndDate";
@@ -73,7 +59,6 @@
         c.ColumnType = MVCxGridViewColumnType.DateEdit;
         c.PropertiesEdit.DisplayFormatString = "MM/dd/yyyy";
     });
-
 
 }).Bind(Model).GetHtml()
 
