--- a/DXWebApplication/Views/Home/_PartialEmpGridView.cshtml
+++ b/DXWebApplication/Views/Home/_PartialEmpGridView.cshtml
@@ -1,31 +1,41 @@
 ﻿@model List<DXWebApplication.Models.ACC_EMP_Employee>
-
 @using System.Web.UI.WebControls;
-
 @{
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "employeeGridView";
         settings.CallbackRouteValues = new { Controller = "Home", Action = "PartialEmpGridView" };
-
         settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "Home", Action = "PartialEmpGridViewAddNew" };
         settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "Home", Action = "PartialEmpGridViewEdit" };
         settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "Home", Action = "PartialEmpGridViewDelete" };
         settings.SettingsExport.EnableClientSideExportAPI = true;
         settings.SettingsExport.ExcelExportMode = DevExpress.Export.ExportType.DataAware;
+        settings.SettingsEditing.Mode = GridViewEditingMode.PopupEditForm;
+        settings.SettingsBehavior.ConfirmDelete = true;
+        settings.SettingsPopup.EditForm.HorizontalAlign = PopupHorizontalAlign.Center;
+        settings.SettingsPopup.EditForm.Width = 600;
+        settings.Width = Unit.Percentage(100);
+        settings.SettingsPopup.EditForm.SettingsAdaptivity.Mode = PopupControlAdaptivityMode.OnWindowInnerWidth;
+        settings.SettingsPopup.EditForm.SettingsAdaptivity.SwitchAtWindowInnerWidth = 768;
+        settings.EditFormLayoutProperties.SettingsAdaptivity.AdaptivityMode = FormLayoutAdaptivityMode.SingleColumnWindowLimit;
+        settings.EditFormLayoutProperties.SettingsAdaptivity.SwitchToSingleColumnAtWindowInnerWidth = 700;
+        settings.EditFormLayoutProperties.SettingsItems.VerticalAlign = FormLayoutVerticalAlign.Middle;
+        settings.Settings.ShowFilterRow = true;
+        settings.KeyFieldName = "ACC_EMP_ID";
+        settings.CommandColumn.Visible = true;
+        settings.SettingsBehavior.AllowFocusedRow = true;
+        settings.ClientSideEvents.BeginCallback = "OnBeginCallback";
+        settings.ClientSideEvents.EndCallback = "OnEndCallback";
         settings.ClientSideEvents.ToolbarItemClick = "OnToolbarItemClick";
-
         settings.Toolbars.Add(tb =>
         {
             tb.Enabled = true;
             tb.Position = GridToolbarPosition.Top;
             tb.SettingsAdaptivity.Enabled = true;
             tb.SettingsAdaptivity.EnableCollapseRootItemsToIcons = true;
-
             tb.Items.Add(GridViewToolbarCommand.New);
             tb.Items.Add(GridViewToolbarCommand.Edit);
             tb.Items.Add(GridViewToolbarCommand.Delete);
-
             tb.Items.Add(i =>
             {
                 i.Command = GridViewToolbarCommand.Refresh;
@@ -56,7 +66,6 @@
                     item.Name = "employeeReport";
                     item.Command = GridViewToolbarCommand.Custom;
                 });
-
                 i.Items.Add(item =>
                 {
                     item.Text = "Salary Report";
@@ -69,44 +78,14 @@
                 i.Text = "Contract";
                 i.Name = "showPopupButton";
                 i.Command = GridViewToolbarCommand.Custom;
-
             });
-
         });
-
-        settings.SettingsEditing.Mode = GridViewEditingMode.PopupEditForm;
-        settings.SettingsBehavior.ConfirmDelete = true;
-        settings.SettingsPopup.EditForm.HorizontalAlign = PopupHorizontalAlign.Center;
-        settings.SettingsPopup.EditForm.Width = 600;
-        settings.Width = Unit.Percentage(100);
-
-        settings.SettingsPopup.EditForm.SettingsAdaptivity.Mode = PopupControlAdaptivityMode.OnWindowInnerWidth;
-        settings.SettingsPopup.EditForm.SettingsAdaptivity.SwitchAtWindowInnerWidth = 768;
-        settings.EditFormLayoutProperties.SettingsAdaptivity.AdaptivityMode = FormLayoutAdaptivityMode.SingleColumnWindowLimit;
-        settings.EditFormLayoutProperties.SettingsAdaptivity.SwitchToSingleColumnAtWindowInnerWidth = 700;
-        settings.EditFormLayoutProperties.SettingsItems.VerticalAlign = FormLayoutVerticalAlign.Middle;
-
-
-        settings.Settings.ShowFilterRow = true;
-
-        settings.KeyFieldName = "ACC_EMP_ID";
-        settings.CommandColumn.Visible = true;
-        settings.SettingsBehavior.AllowFocusedRow = true;
-
-        settings.ClientSideEvents.BeginCallback = "OnBeginCallback";
-        settings.ClientSideEvents.EndCallback = "OnEndCallback";
-
-        //settings.CustomJSProperties = (s, e) =>
-        //{
-        //    e.Properties["cpViewError"] = ViewBag.ValidationErrors;
-        //};
-
+        //columns
         settings.Columns.Add(c =>
         {
             c.FieldName = "ACC_EMP_Number";
             c.Caption = "Number";
         });
-
         settings.Columns.Add(c =>
         {
             c.FieldName = "ACC_EMP_JOBID";
@@ -117,11 +96,8 @@
                 p.ValueField = "JOB_ID";
                 p.ValueType = typeof(int);
                 p.DataSource = DXWebApplication.Models.JOB_JOBS.Get();
-
             });
-
         });
-
         settings.Columns.Add(c =>
         {
             c.FieldName = "ACC_EMP_WSTID";
@@ -132,31 +108,23 @@
                 p.ValueField = "WST_ID";
                 p.ValueType = typeof(int);
                 p.DataSource = DXWebApplication.Models.WST_WorkStatus.Get();
-
             });
         });
-
         settings.Columns.Add(c =>
         {
             c.FieldName = "ACC_EMP_Name";
             c.Caption = "Name";
         });
-
         settings.Columns.Add(c =>
         {
             c.FieldName = "ACC_EMP_Name2";
             c.Caption = "Name(another Languge)";
         });
-
-
-
         settings.Columns.Add(c =>
         {
             c.FieldName = "ACC_EMP_Address";
             c.Caption = "Adress";
         });
-
-
         settings.Columns.Add(c =>
         {
             c.FieldName = "ACC_EMP_MartialStatus";
@@ -170,27 +138,21 @@
 
             });
         });
-
         settings.Columns.Add(c =>
         {
             c.FieldName = "ACC_EMP_DateofBirth";
             c.Caption = "Birthday Date";
         });
-
         settings.Columns.Add(c =>
         {
             c.FieldName = "ACC_EMP_PlaceofBirth";
             c.Caption = "Place of Birth";
         });
-
         settings.Columns.Add(c =>
         {
             c.FieldName = "ACC_EMP_documentNum";
             c.Caption = "Document Number";
-
         });
-
-
         settings.Columns.Add(c =>
         {
             c.FieldName = "ACC_EMP_Gender";
@@ -204,39 +166,28 @@
 
             });
         });
-
-
         settings.Columns.Add(c =>
         {
             c.FieldName = "ACC_EMP_JoinDate";
             c.Caption = "Join  Date";
         });
-
-
         settings.Columns.Add(c =>
         {
             c.FieldName = "ACC_EMP_EntryDate";
             c.Caption = "Entry Date";
         });
-
         settings.Columns.Add(c =>
         {
             c.FieldName = "ACC_EMP_UpdatedDate";
             c.Caption = "Update Date";
         });
-
-
-
+        //render
         settings.SetEditFormTemplateContent(c =>
         {
             Html.RenderPartial("_PartialempsEditForm");
-
         });
-
     });
-
     grid.SetEditErrorText((string)ViewBag.ValidationErrors);
-
     grid.Bind(Model).GetHtml();
 }
 
