--- a/DXWebApplication/Views/Home/_PartialEmpcontractEditForm.cshtml
+++ b/DXWebApplication/Views/Home/_PartialEmpcontractEditForm.cshtml
@@ -1,40 +1,26 @@
 ﻿@model List<DXWebApplication.Models.HRS_EMC_EmpContract>
-
 @using System.Web.UI.WebControls;
-
-
 @Html.DevExpress().GridView(settings =>
 {
     settings.Name = "ContractBatch";
     settings.KeyFieldName = "HRS_EMC_ID";
     settings.Width = Unit.Percentage(100);
-
     settings.CallbackRouteValues = new { Controller = "Home", Action = "PartialEmpcontractEditForm" };
     settings.SettingsEditing.BatchUpdateRouteValues = new { Controller = "Home", Action = "ContractBatchEditingUpdateModel", empid = ViewBag.empid };
-
     settings.SettingsEditing.Mode = GridViewEditingMode.Batch;
     settings.SettingsPager.Mode = GridViewPagerMode.ShowPager;
-
     settings.Settings.ShowStatusBar = GridViewStatusBarMode.Hidden;
-
     settings.SettingsEditing.BatchEditSettings.EditMode = GridViewBatchEditMode.Cell;
     settings.SettingsEditing.BatchEditSettings.StartEditAction = GridViewBatchStartEditAction.Click;
     settings.SettingsEditing.BatchEditSettings.HighlightDeletedRows = true;
     settings.SettingsEditing.BatchEditSettings.KeepChangesOnCallbacks = DefaultBoolean.True;
     settings.SettingsEditing.NewItemRowPosition = GridViewNewItemRowPosition.Bottom;
     settings.SettingsEditing.BatchEditSettings.HighlightDeletedRows = false;
-
-
-
     settings.EditFormLayoutProperties.SettingsAdaptivity.AdaptivityMode = FormLayoutAdaptivityMode.SingleColumnWindowLimit;
     settings.EditFormLayoutProperties.SettingsAdaptivity.SwitchToSingleColumnAtWindowInnerWidth = 700;
-    settings.EditFormLayoutProperties.SettingsItems.VerticalAlign = FormLayoutVerticalAlign.Middle;
-
+    settings.EditFormLayoutProperties.SettingsItems.VerticalAlign = FormLayoutVerticalAlign.Middle; 
     settings.ClientSideEvents.BatchEditStartEditing = settings.Name + "_OnBatchEditStartEditing";
-   // settings.ClientSideEvents.BatchEditRowInserting = settings.Name + "_OnBatchEditRowInserting";
-
     settings.CommandColumn.Visible = true;
-    //settings.CommandColumn.ShowCancelButton = false;
     settings.CommandColumn.ShowDeleteButton = true;
     settings.CommandColumn.ShowNewButtonInHeader = true;
     settings.CommandColumn.ShowCancelButton = true;
@@ -42,8 +28,7 @@
     settings.SettingsBehavior.AllowFocusedRow = true;
     settings.CommandColumn.Width = Unit.Pixel(150);
     settings.Settings.ShowFilterRow = true;
-
-
+    //columns
     settings.Columns.Add(c =>
     {
         c.FieldName = "HRS_EMC_Number";
@@ -51,7 +36,6 @@
         c.ColumnType = MVCxGridViewColumnType.SpinEdit;
 
     });
-
     settings.Columns.Add(c =>
     {
         c.FieldName = "HRS_EMC_EmpID";
@@ -65,10 +49,6 @@
             cb.TextField = "ACC_EMP_Name";
         });
     });
-
-
-
-
     settings.Columns.Add(c =>
     {
         c.FieldName = "HRS_EMC_Startdate";
@@ -77,7 +57,6 @@
         c.PropertiesEdit.DisplayFormatString = "MM/dd/yyyy";
 
     });
-
     settings.Columns.Add(c =>
     {
         c.FieldName = "HRS_EMC_Enddate";
@@ -85,7 +64,6 @@
         c.ColumnType = MVCxGridViewColumnType.DateEdit;
         c.PropertiesEdit.DisplayFormatString = "MM/dd/yyyy";
     });
-
     settings.Columns.Add(c =>
     {
         c.FieldName = "HRS_EMC_Action";
@@ -99,7 +77,6 @@
 
         });
     });
-
 }).Bind(Model).GetHtml()
 
 
