--- a/DXWebApplication/Views/Home/_PartialjobsEditForm.cshtml
+++ b/DXWebApplication/Views/Home/_PartialjobsEditForm.cshtml
@@ -19,7 +19,6 @@
             s.ShowModelErrors = true;
         });
     });
-
     flSettings.Items.Add(i =>
     {
         i.FieldName = "JOB_Name2";
@@ -31,10 +30,8 @@
             s.Properties.ValidationSettings.ErrorDisplayMode = ErrorDisplayMode.ImageWithTooltip;
             s.Properties.ValidationSettings.Display = Display.Dynamic;
             s.ShowModelErrors = true;
-
         });
     });
-
     flSettings.Items.Add(i =>
     {
         i.FieldName = "JOB_Shortcut";
@@ -47,8 +44,6 @@
             s.ShowModelErrors = true;
         });
     });
-
-
     flSettings.Items.Add(i =>
     {
         i.FieldName = "JOB_Number";
@@ -64,7 +59,6 @@
 
         });
     });
-
     flSettings.Items.Add(i =>
     {
         i.FieldName = "JOB_Gender";
@@ -77,7 +71,7 @@
             combobox.Properties.DataSource = DXWebApplication.Models.GenderCollection.Gender;
         });
     });
-
+    //upload
     flSettings.Items.Add(i =>
     {
         i.ShowCaption = DefaultBoolean.False;
@@ -97,14 +91,9 @@
                     settings.AdvancedModeSettings.EnableDragAndDrop = true;
                     settings.NullText = "Select multiple files...";
                     settings.AutoStartUpload = true;
-
                     settings.ValidationSettings.Assign(DXWebApplication.Models.JOB_JOBS.UploadValidationSettings);
-
-                    //settings.ClientSideEvents.FilesUploadStart = "function(s,e) { DXUploadedFilesContainer.Clear(); }";
                     settings.ClientSideEvents.FileUploadComplete = "function(s,e) { OnFileUploadComplete(e); }";
-
                 }).GetHtml();
-
                 ViewContext.Writer.Write("<div id='linkContainer'>");//container
                 if (job != null && job.JOB_FileName != null)
                 {
@@ -114,9 +103,7 @@
             }
         });
     });
-
-
-
+    //buttons
     flSettings.Items.Add(i =>
     {
         i.ShowCaption = DefaultBoolean.False;
@@ -129,7 +116,6 @@
                 btnSettings.Text = "Save";
                 btnSettings.ClientSideEvents.Click = "function(s,e){ jobsGridView.UpdateEdit(); }";
             }).Render();
-
             Html.DevExpress().Button(btnSettings =>
             {
                 btnSettings.Name = "btnCancel";
@@ -140,7 +126,6 @@
             ViewContext.Writer.Write("</div>");
         });
     });
-
 
 }).Bind(job).GetHtml()
 
