add contract as pade control on the edit form

--- a/DXWebApplication/Views/Home/Employee.cshtml
+++ b/DXWebApplication/Views/Home/Employee.cshtml
@@ -77,11 +77,9 @@
 
 
 
-    function onTabClick(s, e) {
-        if (e.tab.name === "salary") {
-            $("#salaryContent").show();
-            $("#batchGridViewContainer").show();
-        }
+    function onTabClick(s, e) { 
+        $("#salarybatch").show
+        $("#contractbatch").show
     }
 </script>
 
