--- a/DXWebApplication/Views/Home/_PartialEmpcontractEditForm.cshtml
+++ b/DXWebApplication/Views/Home/_PartialEmpcontractEditForm.cshtml
@@ -21,6 +21,7 @@
     settings.EditFormLayoutProperties.SettingsAdaptivity.SwitchToSingleColumnAtWindowInnerWidth = 700;
     settings.EditFormLayoutProperties.SettingsItems.VerticalAlign = FormLayoutVerticalAlign.Middle;
     settings.ClientSideEvents.BatchEditStartEditing = settings.Name + "_OnBatchEditStartEditing";
+    settings.ClientSideEvents.BeginCallback= settings.Name + "_OnBeginCallback";
     settings.CommandColumn.Visible = true;
     settings.CommandColumn.ShowDeleteButton = true;
     settings.CommandColumn.ShowNewButtonInHeader = true;
